--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,7 +176,7 @@
   }
 </style>
 
-<main class="main">
+<main class="main bg-gradient-to-r from-gray-100 via-[#bce1ff] to-gray-100">
   <div class="relative mx-auto flex w-full max-w-8xl flex-auto justify-center sm:px-2 lg:px-8 xl:px-12">
     <sidebar></sidebar>
     <articles-tag></articles-tag>
