--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,6 +1,6 @@
 <div class="min-w-0 max-w-2xl flex-auto px-4 py-16 lg:max-w-none lg:pl-8 lg:pr-0 xl:px-16">
     <article>
-        <header class="mb-9 space-y-1">
+        <header id="introduction" class="mb-9 space-y-1">
             <p class="font-display text-sm font-medium text-sky-500">Introduction</p>
             <h1 class="font-display text-3xl tracking-tight text-slate-900 dark:text-white">Serverless
                 Node.js with AWS Lambda
@@ -8,7 +8,7 @@
         </header>
         <div
             class="prose prose-slate max-w-none dark:prose-invert dark:text-slate-400 prose-headings:scroll-mt-28 prose-headings:font-display prose-headings:font-normal lg:prose-headings:scroll-mt-[8.5rem] prose-lead:text-slate-500 dark:prose-lead:text-slate-400 prose-a:font-semibold dark:prose-a:text-sky-400 prose-a:no-underline prose-a:shadow-[inset_0_-2px_0_0_var(--tw-prose-background,#fff),inset_0_calc(-1*(var(--tw-prose-underline-size,4px)+2px))_0_0_var(--tw-prose-underline,theme(colors.sky.300))] hover:prose-a:[--tw-prose-underline-size:6px] dark:[--tw-prose-background:theme(colors.slate.900)] dark:prose-a:shadow-[inset_0_calc(-1*var(--tw-prose-underline-size,2px))_0_0_var(--tw-prose-underline,theme(colors.sky.800))] dark:hover:prose-a:[--tw-prose-underline-size:6px] prose-pre:rounded-xl prose-pre:bg-slate-900 prose-pre:shadow-lg dark:prose-pre:bg-slate-800/60 dark:prose-pre:shadow-none dark:prose-pre:ring-1 dark:prose-pre:ring-slate-300/10 dark:prose-hr:border-slate-800">
-            <section class="mb-6">
+            <section id="what-is-serverless" class="mb-6">
                 <h2 class="text-2xl font-semibold mb-4">What is Serverless?</h2>
                 <p class="">
                     Serverless is a cloud-computing model that enables developers to build and run applications without
@@ -20,7 +20,7 @@
                     the complexities of server management.
                 </p>
             </section>
-            <section class="mb-6">
+            <section id="why-aws-lambda" class="mb-6">
                 <h2 class="text-2xl font-semibold mb-4">Why AWS Lambda?</h2>
                 <p class="">
                     AWS Lambda is one of the most popular serverless platforms, offering robust, scalable, and highly
@@ -105,7 +105,7 @@
 <span class="token plain"></span><span class="token punctuation">}</span>
 </code></pre> -->
 
-            <section class="mb-6">
+            <section id="why-use-node-js-with-aws-lambda" class="mb-6">
                 <h2 class="text-2xl font-semibold mb-4">Why Use Node.js with AWS Lambda?</h2>
                 <p class="">
                     Node.js is a popular runtime known for its non-blocking, event-driven architecture, which aligns
@@ -125,7 +125,7 @@
                     </li>
                 </ul>
             </section>
-            <section class="mb-6">
+            <section id="aws-lambda-basics" class="mb-6">
                 <h2 class="text-2xl font-semibold mb-4">AWS Lambda Basics</h2>
                 <p class="">
                     With AWS Lambda, you deploy code as individual functions, which are triggered by various AWS events.
@@ -142,8 +142,9 @@
                 </ul>
             </section>
 
-            <section>
-                <h2 class="text-2xl font-semibold mb-4">Getting Started</h2>
+            <section id="getting-started">
+                <h1 class="font-display text-3xl tracking-tight text-slate-900 dark:text-white mb-4">Getting Started
+                </h1>
                 <p class="">
                     In this documentation, we will guide you through developing, deploying, and managing serverless
                     Node.js applications on AWS Lambda.
@@ -201,74 +202,7 @@
                     </div>
                 </div>
             </div>
-            <hr>
-            <h2 id="basic-usage">Basic usage</h2>
-            <p>Praesentium laudantium magni. Consequatur reiciendis aliquid nihil iusto ut in et. Quisquam ut et aliquid
-                occaecati. Culpa veniam aut et voluptates amet perspiciatis. Qui exercitationem in qui. Vel qui
-                dignissimos
-                sit quae distinctio.</p>
-            <h3 id="your-first-cache">Your first cache</h3>
-            <p>Minima vel non iste debitis. Consequatur repudiandae et quod accusamus sit molestias consequatur aperiam.
-                Et
-                sequi ipsa eum voluptatibus ipsam. Et quisquam ut.</p>
-            <p>Qui quae esse aspernatur fugit possimus. Quam sed molestiae temporibus. Eum perferendis dignissimos
-                provident
-                ea et. Et repudiandae quasi accusamus consequatur dolore nobis. Quia reiciendis necessitatibus a
-                blanditiis
-                iste quia. Ut quis et amet praesentium sapiente.</p>
-            <p>Atque eos laudantium. Optio odit aspernatur consequuntur corporis soluta quidem sunt aut doloribus.
-                Laudantium assumenda commodi.</p>
-            <h3 id="clearing-the-cache">Clearing the cache</h3>
-            <p>Vel aut velit sit dolor aut suscipit at veritatis voluptas. Laudantium tempore praesentium. Qui ut
-                voluptatem.</p>
-            <p>Ea est autem fugiat velit esse a alias earum. Dolore non amet soluta eos libero est. Consequatur qui
-                aliquam
-                qui odit eligendi ut impedit illo dignissimos.</p>
-            <p>Ut dolore qui aut nam. Natus temporibus nisi voluptatum labore est ex error vel officia. Vero repellendus
-                ut.
-                Suscipit voluptate et placeat. Eius quo corporis ab et consequatur quisquam. Nihil officia facere
-                dolorem
-                occaecati alias deleniti deleniti in.</p>
-            <h3 id="adding-middleware">Adding middleware</h3>
-            <p>Officia nobis tempora maiores id iusto magni reprehenderit velit. Quae dolores inventore molestiae
-                perspiciatis aut. Quis sequi officia quasi rem officiis officiis. Nesciunt ut cupiditate. Sunt aliquid
-                explicabo enim ipsa eum recusandae. Vitae sunt eligendi et non beatae minima aut.</p>
-            <p>Harum perferendis aut qui quibusdam tempore laboriosam voluptatum qui sed. Amet error amet totam
-                exercitationem aut corporis accusantium dolorum. Perspiciatis aut animi et. Sed unde error ut aut rerum.
-            </p>
-            <p>Ut quo libero aperiam mollitia est repudiandae quaerat corrupti explicabo. Voluptas accusantium sed et
-                doloribus voluptatem fugiat a mollitia. Numquam est magnam dolorem asperiores fugiat. Soluta et fuga
-                amet
-                alias temporibus quasi velit. Laudantium voluptatum perspiciatis doloribus quasi facere. Eveniet
-                deleniti
-                veniam et quia veritatis minus veniam perspiciatis.</p>
-            <hr>
-            <h2 id="getting-help">Getting help</h2>
-            <p>Consequuntur et aut quisquam et qui consequatur eligendi. Necessitatibus dolorem sit. Excepturi cumque
-                quibusdam soluta ullam rerum voluptatibus. Porro illo sequi consequatur nisi numquam nisi autem. Ut
-                necessitatibus aut. Veniam ipsa voluptatem sed.</p>
-            <h3 id="submit-an-issue">Submit an issue</h3>
-            <p>Inventore et aut minus ut voluptatem nihil commodi doloribus consequatur. Facilis perferendis nihil sit
-                aut
-                aspernatur iure ut dolores et. Aspernatur odit dignissimos. Aut qui est sint sint.</p>
-            <p>Facere aliquam qui. Dolorem officia ipsam adipisci qui molestiae. Error voluptatem reprehenderit ex.</p>
-            <p>Consequatur enim quia maiores aperiam et ipsum dicta. Quam ut sit facere sit quae. Eligendi veritatis aut
-                ut
-                veritatis iste ut adipisci illo.</p>
-            <h3 id="join-the-community">Join the community</h3>
-            <p>Praesentium facilis iste aliquid quo quia a excepturi. Fuga reprehenderit illo sequi voluptatem
-                voluptatem
-                omnis. Id quia consequatur rerum consectetur eligendi et omnis. Voluptates iusto labore possimus
-                provident
-                praesentium id vel harum quisquam. Voluptatem provident corrupti.</p>
-            <p>Eum et ut. Qui facilis est ipsa. Non facere quia sequi commodi autem. Dicta autem sit sequi omnis
-                impedit.
-                Eligendi amet dolorum magnam repudiandae in a.</p>
-            <p>Molestiae iusto ut exercitationem dolorem unde iusto tempora atque nihil. Voluptatem velit facere
-                laboriosam
-                nobis ea. Consequatur rerum velit ipsum ipsam. Et qui saepe consequatur minima laborum tempore
-                voluptatum et.
-                Quia eveniet eaque sequi consequatur nihil eos.</p>
+
         </div>
     </article>
     <dl class="mt-12 flex border-t border-slate-200 pt-6 dark:border-slate-800">
