--- a/src/app/onthispage/onthispage.component.html
+++ b/src/app/onthispage/onthispage.component.html
@@ -4,42 +4,18 @@
         <h2 id="on-this-page-title" class="font-display text-sm font-medium text-slate-900 dark:text-white">On this page
         </h2>
         <ol role="list" class="mt-4 space-y-3 text-sm">
+            @for (item of datas; track null) {
             <li>
-                <h3><a class="text-sky-500" href="#quick-start">Quick start</a></h3>
+                <!-- text-sky-500 -->
+                <h3><a class="" href="#{{item.title.id}}">{{item.title.name}}</a></h3>
                 <ol role="list" class="mt-2 space-y-3 pl-5 text-slate-500 dark:text-slate-400">
-                    <li><a class="hover:text-slate-600 dark:hover:text-slate-300"
-                            href="#installing-dependencies">Installing
-                            dependencies</a></li>
-                    <li><a class="hover:text-slate-600 dark:hover:text-slate-300"
-                            href="#configuring-the-library">Configuring
-                            the library</a></li>
-                </ol>
-            </li>
-            <li>
-                <h3><a class="font-normal text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-300"
-                        href="#basic-usage">Basic usage</a></h3>
-                <ol role="list" class="mt-2 space-y-3 pl-5 text-slate-500 dark:text-slate-400">
-                    <li><a class="hover:text-slate-600 dark:hover:text-slate-300" href="#your-first-cache">Your first
-                            cache</a>
+                    @for (sub of item.sub_title; track null) {
+                    <li><a class="hover:text-slate-600 dark:hover:text-slate-300" href="#{{sub.id}}">{{sub.name}}</a>
                     </li>
-                    <li><a class="hover:text-slate-600 dark:hover:text-slate-300" href="#clearing-the-cache">Clearing
-                            the
-                            cache</a></li>
-                    <li><a class="hover:text-slate-600 dark:hover:text-slate-300" href="#adding-middleware">Adding
-                            middleware</a></li>
+                    }
                 </ol>
             </li>
-            <li>
-                <h3><a class="font-normal text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-300"
-                        href="#getting-help">Getting help</a></h3>
-                <ol role="list" class="mt-2 space-y-3 pl-5 text-slate-500 dark:text-slate-400">
-                    <li><a class="hover:text-slate-600 dark:hover:text-slate-300" href="#submit-an-issue">Submit an
-                            issue</a>
-                    </li>
-                    <li><a class="hover:text-slate-600 dark:hover:text-slate-300" href="#join-the-community">Join the
-                            community</a></li>
-                </ol>
-            </li>
+            }
         </ol>
     </nav>
 </div>
