--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -15,13 +15,16 @@
               href="/">Getting started</a></li>
           <li class="relative"><a
               class="block w-full pl-3.5 before:pointer-events-none before:absolute before:-left-1 before:top-1/2 before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full text-slate-500 before:hidden before:bg-slate-300 hover:text-slate-600 hover:before:block dark:text-slate-400 dark:before:bg-slate-700 dark:hover:text-slate-300"
-              href="/docs/installation">Installation</a></li>
+              href="installation">Installation</a></li>
         </ul>
       </li>
       <li>
         <h2 class="font-display font-medium text-slate-900 dark:text-white">Core concepts</h2>
         <ul role="list"
           class="mt-2 space-y-2 border-l-2 border-slate-100 lg:mt-4 lg:space-y-4 lg:border-slate-200 dark:border-slate-800">
+          <li class="relative"><a
+              class="block w-full pl-3.5 before:pointer-events-none before:absolute before:-left-1 before:top-1/2 before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full text-slate-500 before:hidden before:bg-slate-300 hover:text-slate-600 hover:before:block dark:text-slate-400 dark:before:bg-slate-700 dark:hover:text-slate-300"
+              href="core-concepts">Core</a></li>
           <li class="relative"><a
               class="block w-full pl-3.5 before:pointer-events-none before:absolute before:-left-1 before:top-1/2 before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full text-slate-500 before:hidden before:bg-slate-300 hover:text-slate-600 hover:before:block dark:text-slate-400 dark:before:bg-slate-700 dark:hover:text-slate-300"
               href="/docs/understanding-caching">Understanding caching</a></li>
@@ -39,7 +42,7 @@
               href="/docs/the-butterfly-effect">The butterfly effect</a></li>
         </ul>
       </li>
-      <li>
+      <!-- <li>
         <h2 class="font-display font-medium text-slate-900 dark:text-white">Advanced guides</h2>
         <ul role="list"
           class="mt-2 space-y-2 border-l-2 border-slate-100 lg:mt-4 lg:space-y-4 lg:border-slate-200 dark:border-slate-800">
@@ -62,8 +65,8 @@
               class="block w-full pl-3.5 before:pointer-events-none before:absolute before:-left-1 before:top-1/2 before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full text-slate-500 before:hidden before:bg-slate-300 hover:text-slate-600 hover:before:block dark:text-slate-400 dark:before:bg-slate-700 dark:hover:text-slate-300"
               href="/docs/predictive-data-generation">Predictive data generation</a></li>
         </ul>
-      </li>
-      <li>
+      </li> -->
+      <!-- <li>
         <h2 class="font-display font-medium text-slate-900 dark:text-white">API reference</h2>
         <ul role="list"
           class="mt-2 space-y-2 border-l-2 border-slate-100 lg:mt-4 lg:space-y-4 lg:border-slate-200 dark:border-slate-800">
@@ -80,14 +83,14 @@
               class="block w-full pl-3.5 before:pointer-events-none before:absolute before:-left-1 before:top-1/2 before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full text-slate-500 before:hidden before:bg-slate-300 hover:text-slate-600 hover:before:block dark:text-slate-400 dark:before:bg-slate-700 dark:hover:text-slate-300"
               href="/docs/cacheadvance-regret">CacheAdvance.regret()</a></li>
         </ul>
-      </li>
+      </li> -->
       <li>
         <h2 class="font-display font-medium text-slate-900 dark:text-white">Contributing</h2>
         <ul role="list"
           class="mt-2 space-y-2 border-l-2 border-slate-100 lg:mt-4 lg:space-y-4 lg:border-slate-200 dark:border-slate-800">
           <li class="relative"><a
               class="block w-full pl-3.5 before:pointer-events-none before:absolute before:-left-1 before:top-1/2 before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full text-slate-500 before:hidden before:bg-slate-300 hover:text-slate-600 hover:before:block dark:text-slate-400 dark:before:bg-slate-700 dark:hover:text-slate-300"
-              href="/docs/how-to-contribute">How to contribute</a></li>
+              href="contributing">How to contribute</a></li>
           <li class="relative"><a
               class="block w-full pl-3.5 before:pointer-events-none before:absolute before:-left-1 before:top-1/2 before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full text-slate-500 before:hidden before:bg-slate-300 hover:text-slate-600 hover:before:block dark:text-slate-400 dark:before:bg-slate-700 dark:hover:text-slate-300"
               href="/docs/architecture-guide">Architecture guide</a></li>
